<?xml version="1.0"?>
<package format="3">
  <name>auto_turret</name>
  <version>0.0.1</version>
  <description>Arjuna Auto Turret - Camera, Detection, Tracking, Control</description>

  <maintainer email="iot@raspberrypi.com">Raspberry Pi User</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- Python OpenCV / NumPy required -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- For web streaming if used -->
  <exec_depend>python3-flask</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
